--- a/wlearn-react/src/index.css
+++ b/wlearn-react/src/index.css
@@ -12,6 +12,106 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+/************************* 
+    APP HEADER
+*************************/
+.dropdown-menu {
+    min-width: 6rem;
+    left: -40px;
+}
+
+.dropdown-item {
+    padding: 0.25rem 1rem;
+}
+
+.myNavbar{
+    border-bottom: 1px solid #cdcdcd;
+    -webkit-box-shadow: 0px 1px 2px 0px rgb(223, 223, 223);
+    -moz-box-shadow: 0px 1px 2px 0px rgba(223, 223, 223);
+    box-shadow: 0px 1px 2px 0px rgba(223, 223, 223);
+}
+
+.navbar-dark .navbar-nav .nav-link{
+    color: rgb(61, 61, 61);
+    font-size: 0.9rem;
+}
+.nav-link.btn{
+    color: #007bff !important;
+}
+
+.nav-link.btn:hover, .nav-link.btn:active, .nav-link.btn:focus{
+    color: #fff !important;
+    background: #007bff !important;
+}
+.navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:active{
+    color: black;
+    font-size: 0.9rem;
+
+}
+
+.dropdown.nav-item{
+    border-left: 1px solid #cdcdcd;
+    margin-left: 30px;
+    padding-left: 30px;
+}
+
+
+/************************* 
+    NOT FOUND & SERVER ERROR
+*************************/
+.page-not-found {
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 50px;
+    padding: 40px;
+    border: 1px solid #c8c8c8; 
+    text-align: center;   
+}
+
+.page-not-found .title {
+    font-size: 50px;
+    letter-spacing: 10px;
+    margin-bottom: 10px;
+}
+
+.page-not-found .desc {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.go-back-btn {
+    min-width: 160px;
+}
+
+.server-error-page {
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 50px;
+    padding: 40px;
+    border: 1px solid #c8c8c8; 
+    text-align: center;   
+}
+
+.server-error-page .server-error-title {
+    font-size: 50px;
+    letter-spacing: 10px;
+    margin-bottom: 10px;
+    color: #f44336;
+}
+
+.server-error-page .server-error-desc {
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+
+.server-error-go-back-btn {
+    min-width: 160px;
+}
+
+/************************* 
+    CONTENT
+*************************/
 .text-info{
     color: black !important;
 }
@@ -190,4 +290,68 @@ code {
 
 .Toaster__manager-top-right{
     top: 65px !important;
+}
+
+.removeWikiLabel{
+    cursor: pointer;
+    color: white;
+}
+
+.breadcrumbLink{
+    color: white;
+    display: inline-block;
+    font-size: 12px;
+    font-weight: 600;
+}
+
+.breadcrumbLink:hover{
+    color: white;
+    text-decoration: none;
+}
+
+.breadcrumbLink:after{
+    content: ">";
+    margin-left: 5px;
+    margin-right: 5px;;
+}
+
+.breadcrumbLink:last-child{
+    font-weight: 300;
+}
+
+.breadcrumbLink:last-child:after{
+    content: "";
+    margin-left: 5px;
+    margin-right: 5px;;
+}
+
+.searchInput{
+    border-radius: 0;
+}
+
+.questionUl{
+    list-style-type: none;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.questionUl>li{
+    padding-left: 20px;
+}
+
+.inlineBtn{
+    padding-top: 0 !important; 
+    padding-bottom: 0 !important;
+    margin-top: -3px !important;
+}
+
+.errorMessage{
+    color: #dc3545;
+    font-size: 12px;
+}
+
+.topicCaption{
+    height: 50px;
+    overflow: hidden;
+    line-height: 24px;
 }
