--- a/wlearn-react/src/index.css
+++ b/wlearn-react/src/index.css
@@ -355,3 +355,41 @@ code {
     overflow: hidden;
     line-height: 24px;
 }
+
+.sectionBg{
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: relative;
+    z-index: 0;
+}
+.sectionBg>div{
+    z-index: 999;
+    color: white !important;
+}
+
+.sectionBg:after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: black;
+    opacity: 0.5;
+    z-index: -1;
+
+}
+.card{
+    transition: all 0.3s ease-in-out;
+}
+.card:hover{
+    -webkit-box-shadow: 0px 1px 3px 1px rgba(143,143,143,1);
+    -moz-box-shadow: 0px 1px 3px 1px rgba(143,143,143,1);
+    box-shadow: 0px 1px 3px 1px rgba(143,143,143,1);
+}
+.white-bg{
+    background: white;
+    
+}
+
